fix scrollbar to prevent page skipping

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ body {
   padding: 0;
   font-size: 12pt;
   color: #111;
+  overflow: scroll;
 }
 
 a, a:active, a:focus {
